--- a/trackalytics/templates/dashboard.html
+++ b/trackalytics/templates/dashboard.html
@@ -6,7 +6,6 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
@@ -15,6 +14,7 @@
         <h1 class="dashboard-title-text">Dashboard Overview</h1>
     </div>
     
+    <!-- Metrics Cards -->
     <div class="dashboard-main-cards">
         <div class="dashboard-card">
             <div class="card-inner">
@@ -41,6 +41,7 @@
         </div>
     </div>
 
+    <!-- Charts and Alerts Grid -->
     <div class="dashboard-grid">
         <div class="charts">
             <div class="chart-card">
@@ -54,7 +55,7 @@
             </div>
         </div>
 
-        <!-- Add this new real-time alerts section -->
+        <!-- Real-time Alerts -->
         <div class="alerts-container">
             <div class="alerts-card">
                 <div class="alerts-header">
@@ -78,20 +79,4 @@
 <script src="{% static 'js/dashboard.js' %}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 <script src="{% static 'js/realtime_inventory.js' %}"></script>
-<script>
-    function getCookie(name) {
-        let cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-            const cookies = document.cookie.split(';');
-            for (let i = 0; i < cookies.length; i++) {
-                const cookie = cookies[i].trim();
-                if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
-                }
-            }
-        }
-        return cookieValue;
-    }
-    </script>
 {% endblock %}
